# project_5_part_2

./: 50000_words_6770_uniq.txt  6770_uniq_words.txt  CMakeLists.txt  Ghafoor_Zainab_project5_part2_report.md  HashTableDictionary.cpp  HashTableDictionary.hpp  InvertedListDictionary.cpp  InvertedListDictionary.hpp  LRUHarness.cpp  Operations.hpp  README.md  SmallIntMixedOperations.cpp  SmallIntMixedOperations.hpp  full_report.md  histogram_report.md  main.cpp
lru_profile_trace_files/: lru_profile_N_1024_S_23.trace  lru_profile_N_2048_S_23.trace  lru_profile_N_4096_S_23.trace  lru_profile_N_8192_S_23.trace
